occurrence api adjustments
adds fields for the api to query occurrences by
