# api/app/Http/Controllers/OccurrenceController.php
@@ -55,6 +55,40 @@ class OccurrenceController extends Controller{
 	 *		 required=false,
 	 *		 @OA\Schema(type="string")
 	 *	 ),
+	 *	 ),
+	 *	 @OA\Parameter(
+	 *		 name="collid",
+	 *		 in="query",
+	 *		 description="collid - collection identifier in portal",
+	 *		 required=false,
+	 *		 @OA\Schema(type="string")
+	 *	 ),
+	 *	 @OA\Parameter(
+	 *		 name="family",
+	 *		 in="query",
+	 *		 description="family",
+	 *		 required=false,
+	 *		 @OA\Schema(type="string")
+	 *	 ),
+	 *	 @OA\Parameter(
+	 *		 name="sciname",
+	 *		 in="query",
+	 *		 description="Scientific Name - binomen only without authorship",
+	 *		 required=false,
+	 *		 @OA\Schema(type="string")
+	 *	 ),
+	 *	 @OA\Parameter(
+	 *		 name="recordedBy",
+	 *		 in="query",
+	 *		 description="Name of collector or observer",
+	 *		 required=false,
+	 *		 @OA\Schema(type="string")
+	 *	 @OA\Parameter(
+	 *		 name="identifiedBy",
+	 *		 in="query",
+	 *		 description="Name of identifier or determiner",
+	 *		 required=false,
+	 *		 @OA\Schema(type="string")
 	 *	 @OA\Parameter(
 	 *		 name="limit",
 	 *		 in="query",
@@ -94,7 +128,11 @@ class OccurrenceController extends Controller{
 		if($request->has('country')) $conditions[] = ['country',$request->country];
 		if($request->has('stateProvince')) $conditions[] = ['stateProvince',$request->stateProvince];
 		if($request->has('county')) $conditions[] = ['county','LIKE',$request->county.'%'];
-
+		if($request->has('collid')) $conditions[] = ['collid',$request->collid];
+		if($request->has('family')) $conditions[] = ['family',$request->family];
+		if($request->has('sciname')) $conditions[] = ['sciname','LIKE',$request->sciname.'%'];
+		if($request->has('recordedBy')) $conditions[] = ['recordedBy','LIKE',$request->'%'.recordedBy.'%'];
+		if($request->has('identifiedBy')) $conditions[] = ['identifiedBy','LIKE',$request->'%.'identifiedBy.'%'];
 		$fullCnt = Occurrence::where($conditions)->count();
 		$result = Occurrence::where($conditions)->skip($offset)->take($limit)->get();
 
